fix: dark mode bg

--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -5,8 +5,19 @@ body{
     background-color: fun.color('bg');
     position: relative;
     overflow-x: hidden;
+    &::before{
+        content: "";
+        position: fixed;
+        width: 100%;
+        height: 130vh;
+        top: 0;
+        left: 0;
+        background-color: fun.color('bg');
+    }
     &.dark_mode{
-        background-color: fun.color('bg-dark');
+        &::before{
+            background-color: fun.color('bg-dark');
+        }
     }
 }
 
