--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -3,6 +3,8 @@
 
 .footer{
     width: 100%;
+    position: relative;
+    z-index: 1;
 }
 
 .footer__scroll{
